データベース編集

--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,10 @@ production:
   database: furima_28718_production
   username: furima_28718
   password: <%= ENV['FURIMA_28718_DATABASE_PASSWORD'] %>
+
+  production:
+  <<: *default
+  database: furima_28718_production
+  username: root
+  password: <%= ENV['kirateiru'] %>
+  socket: /var/lib/mysql/mysql.sock
