--- a/config/database.yml
+++ b/config/database.yml
@@ -57,5 +57,5 @@ production:
   <<: *default
   database: furima_28718_production
   username: root
-  password: <%= ENV['FURIMA_28718_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
